# telco_churn_clients

./: .dockerignore  .gitignore  DOCUMENTATION.md  Dockerfile  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TUTORIAL_NOVO_PROJETO.md  docker-compose.yml  generate_data.py  pyproject.toml  pytest.ini  requirements.txt  test_ci_locally.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/agents/: copilot-coding-agent.md
.github/workflows/: ci.yml  code-quality.yml  pr-analysis.yml
api/: __init__.py  main.py
api/core/: config.py  logging.py
api/routes/: drift.py  health.py  interpret.py  models.py  prediction.py
api/schemas/: __init__.py  drift.py  prediction.py
api/services/: model_service.py
config/: default.yaml  project.yaml
models/: churn_model_catboost.joblib  model.joblib  model_catboost.joblib  model_lightgbm.joblib  model_xgboost.joblib  test_pipeline.joblib
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  02_preprocess_feature_engineering.ipynb  03_modeling.ipynb  04_shap_interpretability.ipynb
reports/: drift.json  metrics.json
scripts/: dashboard.py  monitoring_pipeline.py  optimize_model.py  run_pipeline.py  test_ci_locally.sh  train_pipeline.py
src/: config.py  enums.py  evaluate.py  feature_engineering.py  features.py  inference.py  interpret.py  logger.py  monitoring.py  notebook_utils.py  optimization.py  pipeline.py  preprocessing.py  train.py  utils.py
tests/: conftest.py  test_api.py  test_dashboard.py  test_evaluate.py  test_feature_engineering.py  test_features.py  test_inference.py  test_integration.py  test_interpret.py  test_log_metrics.py  test_logger.py  test_monitoring.py  test_notebook_utils.py  test_optimization.py  test_preprocessing.py  test_train.py  test_utils.py
