[tool.poetry]
name = "churn_clientes"
version = "1.3.0"
description = "Customer Churn Prediction - End-to-End ML Pipeline with FastAPI"
authors = ["Gabriela <gabriela@example.com>"]
readme = "README.md"
packages = [{include = "src"}, {include = "api"}]
keywords = ["machine-learning", "churn-prediction", "fastapi", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.11"
# Data Science
pandas = "^2.2"
numpy = "^1.24"
scikit-learn = "^1.3"
xgboost = "^2.0"
lightgbm = "^4.6.0"
catboost = "^1.2.8"
optuna = "^4.7.0"
imbalanced-learn = "^0.14.1"
# MLOps
mlflow = "2.22.4"
joblib = "^1.3"
# API
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.9"
pydantic-settings = "^2.6"
python-multipart = "^0.0.9"
structlog = "^24.4"
requests = "^2.31"
# Utilities
scipy = "^1.11"
matplotlib = "^3.8"
seaborn = "^0.13"
shap = "^0.44"
missingno = "^0.5.2"
streamlit = "^1.54.0"
plotly = "^6.5.2"
altair = "^6.0.0"
watchdog = "^6.0.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
pytest-mock = "^3.12"
pytest-asyncio = "^0.24"
httpx = "^0.28"
black = "^24.10"
flake8 = "^6.1"
isort = "^5.12"
mypy = "^1.7"
ruff = "^0.8"
pre-commit = "^4.0"
jupyter = "^1.0"
ipython = "^8.17"
ipykernel = "^7.1.0"
python-pptx = "^1.0.2"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -v --cov=src --cov-report=term-missing --strict-markers --tb=short --disable-warnings"
asyncio_mode = "auto"
markers = [
    "unit: testes unitários",
    "integration: testes de integração",
    "slow: testes lentos",
    "smoke: testes de smoke",
    "database: testes que usam banco de dados",
    "api: testes da API FastAPI",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/tests/*", "*/test_*.py", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]

# =============================================================================
# Black Configuration
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | mlruns
)/
'''

# =============================================================================
# isort Configuration
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src", "api"]
skip = [".git", ".venv", "mlruns", "__pycache__"]

# =============================================================================
# Ruff Configuration (Linting)
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "mlruns",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

# =============================================================================
# MyPy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["mlruns", "notebooks", "tests"]

# =============================================================================
# Bandit Configuration (Security)
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "mlruns"]
skips = ["B101"]  # Skip assert warnings in tests

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
